RESOLVED FIXED286300
Crash under WorkerWorkerAgent::connectToAllWorkerInspectorProxies() on the bots
https://bugs.webkit.org/show_bug.cgi?id=286300
Summary Crash under WorkerWorkerAgent::connectToAllWorkerInspectorProxies() on the bots
Chris Dumez
Reported 2025-01-21 08:51:14 PST
We see the following crash on the bots: ``` Thread 16 Crashed:: Dispatch queue: 0 com.apple.JavaScriptCore 0x12f2475d0 WTFCrash 1 com.apple.WebCore 0x300148904 WTF::RefCountedBase::applyRefDerefThreadingCheck() const 2 com.apple.WebCore 0x30014ac3c WTF::RefCountedBase::ref() const 3 com.apple.WebCore 0x305667b98 WTF::DefaultRefDerefTraits<WebCore::WorkerInspectorProxy>::ref(WebCore::WorkerInspectorProxy&) 4 com.apple.WebCore 0x305667b68 WTF::Ref<WebCore::WorkerInspectorProxy, WTF::RawPtrTraits<WebCore::WorkerInspectorProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkerInspectorProxy>>::Ref(WebCore::WorkerInspectorProxy&) 5 com.apple.WebCore 0x305662b00 WTF::Ref<WebCore::WorkerInspectorProxy, WTF::RawPtrTraits<WebCore::WorkerInspectorProxy>, WTF::DefaultRefDerefTraits<WebCore::WorkerInspectorProxy>>::Ref(WebCore::WorkerInspectorProxy&) 6 com.apple.WebCore 0x30566912c WebCore::WorkerWorkerAgent::connectToAllWorkerInspectorProxies() 7 com.apple.WebCore 0x30564794c WebCore::InspectorWorkerAgent::enable() 8 com.apple.JavaScriptCore 0x130b3e86c Inspector::WorkerBackendDispatcher::enable(long, WTF::RefPtr<WTF::JSONImpl::Object, WTF::RawPtrTraits<WTF::JSONImpl::Object>, WTF::DefaultRefDerefTraits<WTF::JSONImpl::Object>>&&) 9 com.apple.JavaScriptCore 0x130b3e600 Inspector::WorkerBackendDispatcher::dispatch(long, WTF::String const&, WTF::Ref<WTF::JSONImpl::Object, WTF::RawPtrTraits<WTF::JSONImpl::Object>, WTF::DefaultRefDerefTraits<WTF::JSONImpl::Object>>&&) 10 com.apple.JavaScriptCore 0x130afac4c Inspector::BackendDispatcher::dispatch(WTF::String const&) 11 com.apple.WebCore 0x305503408 WebCore::WorkerInspectorController::dispatchMessageFromFrontend(WTF::String const&) 12 com.apple.WebCore 0x3073c82a4 WebCore::WorkerInspectorProxy::sendMessageToWorkerInspectorController(WTF::String const&)::$_0::operator()(WebCore::ScriptExecutionContext&) const 13 com.apple.WebCore 0x3073c81ec WTF::Detail::CallableWrapper<WebCore::WorkerInspectorProxy::sendMessageToWorkerInspectorController(WTF::String const&)::$_0, void, WebCore::ScriptExecutionContext&>::call(WebCore::ScriptExecutionContext&) 14 com.apple.WebCore 0x302e7829c WTF::Function<void (WebCore::ScriptExecutionContext&)>::operator()(WebCore::ScriptExecutionContext&) const 15 com.apple.WebCore 0x3038b7c54 WebCore::ScriptExecutionContext::Task::performTask(WebCore::ScriptExecutionContext&) 16 com.apple.WebCore 0x3073deab4 WebCore::WorkerDedicatedRunLoop::Task::performTask(WebCore::WorkerOrWorkletGlobalScope*) 17 com.apple.WebCore 0x3073ddf28 WebCore::WorkerDedicatedRunLoop::runInMode(WebCore::WorkerOrWorkletGlobalScope*, WebCore::ModePredicate const&) 18 com.apple.WebCore 0x3073dc478 WebCore::WorkerDedicatedRunLoop::run(WebCore::WorkerOrWorkletGlobalScope*) 19 com.apple.WebCore 0x3073dc3ac WebCore::WorkerOrWorkletThread::runEventLoop() ```
Attachments
Chris Dumez
Comment 1 2025-01-21 08:54:14 PST
Chris Dumez
Comment 2 2025-01-22 11:38:35 PST
Chris Dumez
Comment 3 2025-01-22 12:24:33 PST
EWS
Comment 4 2025-01-23 07:35:28 PST
Committed 289288@main (93d2569cbae1): <https://commits.webkit.org/289288@main> Reviewed commits have been landed. Closing PR #39398 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2025-01-23 07:36:21 PST
Note You need to log in before you can comment on or make changes to this bug.