Crash under WorkerWorkerAgent::connectToAllWorkerInspectorProxies() on the bots https://bugs.webkit.org/show_bug.cgi?id=286300

Reviewed by NOBODY (OOPS!).

Have WorkerInspectorProxy subclass ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr as
it can get ref'd / deref'd from multiple threads.

* Source/WebCore/inspector/agents/InspectorWorkerAgent.h:
* Source/WebCore/inspector/agents/page/PageWorkerAgent.cpp:
(WebCore::PageWorkerAgent::connectToAllWorkerInspectorProxies):
* Source/WebCore/inspector/agents/worker/WorkerWorkerAgent.cpp:
(WebCore::WorkerWorkerAgent::connectToAllWorkerInspectorProxies):
* Source/WebCore/workers/WorkerInspectorProxy.cpp:
(WebCore::proxies):
(WebCore::WorkerInspectorProxy::allWorkerInspectorProxies):
(WebCore::WorkerInspectorProxy::workerStarted):
(WebCore::WorkerInspectorProxy::workerTerminated):
(WebCore::WTF_REQUIRES_LOCK): Deleted.
(WebCore::WorkerInspectorProxy::allWorkerInspectorProxiesCopy): Deleted.
* Source/WebCore/workers/WorkerInspectorProxy.h: